# automedal

./: .gitignore  AGENTS.md  Makefile  README.md  THIRD_PARTY_LICENSES.md  all_issues.json  am  analysis.ipynb  config_loader.py  experiment_queue.md  go.mod  go.sum  install.sh  knowledge.md  prepare.py  program.md  pyproject.toml  research_notes.md  run.sh  train.py
.github/workflows/: scout.yml
agent/: gbdt_configs.json  prepare.py  program.md  train.py
automedal/: __init__.py  __main__.py  agent_runtime.py  auth.py  cli.py  dedupe.py  dispatch.py  paths.py  pi_runtime.py  quick_reject.py  run_args.py  run_loop.py
automedal/advisor/: __init__.py  budget.py  client.py  models.py
automedal/advisor/prompts/: audit.md.j2  stagnation.md.j2  tool.md.j2
automedal/agent/: __init__.py  doom_loop.py  errors.py  events.py  kernel.py  messages.py  retry.py
automedal/agent/phases/: __init__.py  _common.py  analyzer.py  experimenter_edit.py  experimenter_eval.py  researcher.py  strategist.py
automedal/agent/prompts/: __init__.py  analyzer.md.j2  experimenter.md.j2  experimenter_eval.md.j2  researcher.md.j2  strategist.md.j2
automedal/agent/providers/: __init__.py  anthropic.py  base.py  openai.py
automedal/agent/tools/: __init__.py  advisor.py  arxiv.py  base.py  cognition.py  fs.py  plan.py  shell.py  subagent.py
cmd/automedal/: main.go
configs/: competition.yaml
data/: encoder_categories.json  feature_names.json  test_ids.npy  y_train.npy  y_val.npy
docs/plans/: backend-harness-enhancements.md  go-tui-migration.md
docs/superpowers/specs/: 2026-04-10-automedal-harness-v2-design.md
harness/: __init__.py  arxiv_search.py  build_trace_trailer.py  check_stagnation.py  compact_memory.py  init_memory.py  next_exp_id.py  rank_journals.py  stream_events.py  verify_iteration.py
internal/advisor/: budget.go  client.go  models.go  sinkadapter.go
internal/advisor/prompts/: audit.tmpl  parity_test.go  prompts.go  stagnation.tmpl  tool.tmpl
internal/agent/: doomloop.go  errors.go  events.go  events_test.go  heal_test.go  kernel.go  messages.go  retry.go  subagent.go
internal/agent/phases/: analyzer.go  common.go  experimenter_edit.go  experimenter_eval.go  researcher.go  strategist.go
internal/agent/prompts/: analyzer.tmpl  experimenter.tmpl  experimenter_eval.tmpl  parity_test.go  prompts.go  researcher.tmpl  strategist.tmpl
internal/agent/providers/: anthropic.go  builder.go  openai.go  provider.go
internal/agent/tools/: advisor.go  arxiv.go  base.go  cognition.go  cognition_test.go  fs.go  fs_test.go  plan.go  shell.go
internal/auth/: env.go  env_test.go
internal/config/: config.go  config_test.go
internal/dispatch/: dispatch.go
internal/harness/: expid.go  harness.go  harness_test.go  memory.go  memory_test.go  rank.go  stagnation.go  trailer.go  verify.go  verify_test.go
internal/paths/: layout.go  layout_test.go  repo_root.go
internal/runloop/: args.go  args_test.go  dedupe.go  dedupe_test.go  loop.go  quickreject.go
internal/scout/: bootstrap.go  discover.go  render.go  scoring.go  scoring_test.go  select.go  sniffshim.go  util.go  yaml.go
internal/scout/templates/: AGENTS.tmpl  parity_test.go  prepare_starter.py.tmpl  program.tmpl  (+1 more)
internal/templates/: funcs.go
internal/ui/: main.go
journal/: 0001-catboost-native-categorical.md  0002-ensemble-temperature-scaling.md  0003-lightgbm-dart-boosting.md  0004-focal-loss-xgb-overconfidence.md  0005-roc-ir-calibration.md  0006-covar-pseudo-label-selection.md  0007-caruana-meta-learner.md  0008-tabr-fourth-member-persisted.md  0009-t-mlp-fourth-member.md  0010-iso-bin-regularization.md  0011-warm-start-optuna.md  0012-na-fir-calibration.md  0013-jsd-local-calibration.md  0014-frequency-encoding.md  0015-gbdt-feature-bagging.md  0016-tabkd-neural-student.md  0017-qxgb-uncertainty-isotonic.md  0018-nacp-noise-aware-calibration.md  0019-huber-loss-xgboost.md  0020-unified-diversity-theory.md  0021-smac-hpo-xgboost.md  0022-morphboost-replace-xgb.md  0023-multi-seed-xgb-averaging.md  0024-irredundant-kfold-hpo.md
prompts/: compactor.md  experimenter.md  experimenter_eval.md  researcher.md  strategist.md
py-shim/sniff/: __main__.py  pyproject.toml  sniff.py
scout/: bootstrap.py  discover.py  render.py  scoring.py  select.py  sniff.py
submissions/: 20260409_231604_xgboost.csv  20260410_082940_ensemble.csv
templates/: AGENTS.md.j2  prepare_starter.py.j2  program.md.j2
tests/: test_advisor_budget.py  test_advisor_client.py  test_advisor_models.py  test_advisor_orchestrator.py  test_advisor_tool.py  test_agent_runtime.py  test_auth.py  test_cognition.py  test_command_input_split.py  test_dangling_tool_calls.py  test_dedupe.py  test_doom_loop.py  test_events.py  test_friendly_errors.py  test_home_dispatch.py  test_kernel.py  test_log_parser.py  test_pathguard.py  test_paths.py  test_phase_machine.py  test_pi_runtime.py  test_plan_tool.py  test_prompts.py  test_provider_retry.py  test_run_args.py  test_sprite_loader.py  test_truncation.py
tests/fixtures/: demo_results.tsv
tui/: __init__.py  __main__.py  app.py  bus.py  events.py  sprite_loader.py  state.py
tui-go/: .gitignore  go.mod  main.go
tui-go/components/: gpu.go  leaderboard.go  logo.go  palette.go  palette_test.go  recent.go  sparkline.go  statusbar.go
tui-go/events/: format.go  format_test.go  reduce.go  samefile.go  samefile_other.go  tail.go  tail_test.go
tui-go/models/: dashboard.go  help.go  home.go  knowledge.go  messages.go  run.go
tui-go/proc/: spawn.go
tui/screens/: command_output.py  confirm_clean.py  dashboard.py  discover.py  doctor.py  home.py  init_progress.py  raw_stream.py  select_competition.py  setup_wizard.py  status.py
tui/sources/: demo.py  events_jsonl.py  git_tags.py  gpu.py  journal.py  log_tail.py  memory.py  results.py
tui/themes/: __init__.py  dark.tcss  palette.py
tui/widgets/: command_input.py  current_experiment.py  experiment_log.py  gpu_stats.py  leaderboard.py  live_stream.py  metric_chart.py  queue_summary.py  recent_activity.py  session_stats.py  sprite_panel.py  status_strip.py
(+32 files in other folders)
