[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Install the automedal package plus the tui/harness/scout sub-packages so
# imports like `from tui.state import ...` work in both dev and installed modes.
packages = ["automedal", "tui", "harness", "scout"]

[tool.hatch.build.targets.wheel.force-include]
# Ship prompts/ and templates/ inside the automedal package so user-mode
# (pipx install) can find them at automedal/prompts/ and automedal/templates/.
"prompts"   = "automedal/prompts"
"templates" = "automedal/templates"
# Ship the splash logo (generated on-demand if missing at runtime).
"tui/assets/logo/automedal.png" = "tui/assets/logo/automedal.png"

[project]
name = "automedal"
version = "1.0.0"
description = "Autonomous Kaggle ML research — one install, one command"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    # Core ML
    "numpy>=1.26",
    "pandas>=2.1",
    "scikit-learn>=1.5",
    "scipy>=1.12",

    # Gradient boosting
    "xgboost>=2.1",
    "lightgbm>=4.5",
    "catboost>=1.2",

    # Hyperparameter optimization
    "optuna>=4.0",

    # Deep learning (GPU)
    "torch>=2.4",
    "pytorch-tabnet>=4.1",

    # Feature engineering & encoding
    "category_encoders>=2.6",

    # AutoML (lightweight)
    "flaml>=2.3",

    # Analysis & visualization
    "matplotlib>=3.9",
    "seaborn>=0.13",

    # Utilities
    "pyarrow>=17.0",
    "joblib>=1.4",
    "imbalanced-learn>=0.12",

    # Scout layer
    "kaggle>=1.6",
    "pyyaml>=6.0",
    "jinja2>=3.1",

    # TUI (primary UX — `automedal` opens the dashboard)
    "textual>=0.80",
    "rich-pixels>=3.0",
    "textual-plotext>=1.0",
    "watchdog>=4.0",
    "pillow>=10",
]

[project.optional-dependencies]
# Heavy AutoML - agent can install on demand
automl = [
    "autogluon.tabular>=1.2",
]
# Arxiv lookups for the Researcher phase (harness v2)
research = [
    "arxiv>=2.1",
]
# Optional GPU telemetry for the TUI (nvidia-smi fallback still used if omitted)
tui-gpu = [
    "pynvml>=11",
]
# Test runner
test = [
    "pytest>=8.0",
]

[project.scripts]
automedal = "automedal.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
