[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Install the automedal package plus harness/scout. The user-facing TUI is
# the Go binary in tui-go/ and is built + distributed separately.
packages = ["automedal", "harness", "scout"]

[tool.hatch.build.targets.wheel.force-include]
# Ship prompts/ and templates/ inside the automedal package so user-mode
# (pipx install) can find them at automedal/prompts/ and automedal/templates/.
"prompts"   = "automedal/prompts"
"templates" = "automedal/templates"

[project]
name = "automedal"
version = "1.0.0"
description = "Autonomous Kaggle ML research — one install, one command"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    # Core ML
    "numpy>=1.26",
    "pandas>=2.1",
    "scikit-learn>=1.5",
    "scipy>=1.12",

    # Gradient boosting
    "xgboost>=2.1",
    "lightgbm>=4.5",
    "catboost>=1.2",

    # Hyperparameter optimization
    "optuna>=4.0",

    # Deep learning (GPU)
    "torch>=2.4",
    "pytorch-tabnet>=4.1",

    # Feature engineering & encoding
    "category_encoders>=2.6",

    # AutoML (lightweight)
    "flaml>=2.3",

    # Analysis & visualization
    "matplotlib>=3.9",
    "seaborn>=0.13",

    # Utilities
    "pyarrow>=17.0",
    "joblib>=1.4",
    "imbalanced-learn>=0.12",

    # Scout layer
    "kaggle>=1.6",
    "pyyaml>=6.0",
    "jinja2>=3.1",

    # Agent runtime — bespoke kernel using official provider SDKs
    "anthropic>=0.40,<0.50",
    "openai>=1.50,<2.0",
    "rank-bm25>=0.2.2",
    "arxiv>=2.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Heavy AutoML - agent can install on demand
automl = [
    "autogluon.tabular>=1.2",
]
# Test runner
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
automedal = "automedal.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
