[project]
name = "automedal-sniff"
version = "0.1.0"
description = "Pandas/NumPy CSV schema inference shim for the AutoMedal Go control plane."
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
]

[project.scripts]
sniff = "sniff.__main__:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
